fix build bug